<resources>
    <string name="app_name">My Application</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_of_signscreen">Welcome to Lafyuu</string>
    <string name="subtitle_ofsigncreen">Sign in to continue</string>
    <string name="password">Your Password</string>
    <string name="Email">Your Email</string>
    <string name="Sign_in">Sign In</string>
    <string name="or">OR</string>
    <string name="login_with_facebook">Login With Facebook</string>
    <string name="login_with_google">Login With Google</string>
    <string name="forget_password">Forget Password?</string>
    <string name="don_t_have_a_account">Don\'t have a account?</string>
    <string name="register">Register</string>
    <string name="let_s_get_started">Let\'s Get Started</string>
    <string name="create_an_account">Create an new account</string>
    <string name="full_name">Full Name</string>
    <string name="mypassword">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="have_a_acount">have a acount?</string>
    <string name="sign_up">Sign Up</string>
    <string name="search_product">Search Product</string>
    <string name="home">Home</string>
    <string name="explore">Explore</string>
    <string name="cart">Cart</string>
    <string name="offer">Offer</string>
    <string name="account">Account</string>
    <string name="search_products">Search Products</string>
    <string name="category">Category</string>
    <string name="more_category">More Category</string>
</resources>